fix overflowing issue occurring on all sizes

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 320px) and (max-device-width: 767px) {
+@media only screen and (max-width: 425px) {
   html {
     font-family: "Inter", sans-serif;
     font-size: 12px;
@@ -661,12 +661,7 @@
 
 /* ******************************media********************* */
 
-@media only screen and (min-width: 768px) and (max-device-width: 2500px) {
-  * {
-    margin: 0;
-    padding: 0;
-  }
-
+@media only screen and (min-width: 768px) {
   html {
     font-family: "Inter", sans-serif;
     font-size: 12px;
